115 - Buscar por capital

--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -2,45 +2,23 @@
 <hr>
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-            <input type="text"
-            name="termino"
-            class="form-control"
-            [(ngModel)]="termino"
-            placeholder="Buscar país..."/>
-        </form>
+        <app-pais-input
+        (onEnter)="buscar( $event )"
+        placeholder="Buscar país..."
+        (onDebounce)="sugerencias( $event )"></app-pais-input>
     </div>
 </div>
 
 <hr>
 
-<div class="alert alert-danger">
-    No se encontró nada con el término ABCD
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontró nada con el término {{termino}}
 </div>
 
-<div class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                <th> # </th>
-                <th> Bandera </th>
-                <th> Nombre </th>
-                <th> Población </th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-                <tr>
-                <td>1</td>
-                <td>bandera</td>
-                <td>nombre</td>
-                <td>12345678</td>
-                <td>
-                    <a href="/pais/cri">Ver...</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        
+<app-pais-tabla [paises]="paises"></app-pais-tabla>
+
     </div>
 </div>
