--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,3 +1,4 @@
+<div class="animate__animated animate__fadeIn animate__faster">
 <h2>Por Capital</h2>
 <hr>
 <div class="row">
@@ -10,7 +11,7 @@
 </div>
 
 <hr>
-
+</div>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontró nada con el término {{termino}}
 </div>
@@ -22,3 +23,4 @@
 
     </div>
 </div>
+
