--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,3 +1,4 @@
+<div class="animate__animated animate__fadeIn animate__faster">
 <h2>Por País</h2>
 <hr>
 <div class="row">
@@ -9,7 +10,28 @@
     </div>
 </div>
 
+
+<ul *ngIf="mostrarSugerencias" 
+    class="list-group">
+    <li *ngFor="let pais of paisesSugeridos" 
+    class="list-group-item list-group-item-action">
+        <a class="nav-link" [routerLink]="['/pais', pais.cca2]">
+            {{ pais.name.common }}
+    </a>
+    </li>
+    <li class="list-group-item list-group-item-action"
+        (click)="buscarSugerido(termino)">
+        <a class="nav-link">
+            Buscar "{{ termino }}"
+        </a>
+    </li>
+</ul>
+
+
+
+
 <hr>
+</div>
 
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontró nada con el término {{termino}}
@@ -21,4 +43,3 @@
 <app-pais-tabla [paises]="paises"></app-pais-tabla>
 
     </div>
-</div>
